[package]
name = "mozjs_sys"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[features]
debugmozjs = []
jitspew = []
profilemozjs = []
streams = []
crown = []

[dependencies]
libc = { workspace = true }
libz-sys = "1.1.19"
encoding_c = "0.9.8"
encoding_c_mem = "0.2.6"
icu_capi = "1.4.0"
v8 = { workspace = true }